[tool.poetry]
name = "repl_nix_NFT-Portfolio-Appraisal"
version = "0.1.0"
description = ""
authors = ["Kofi"]

[tool.poetry.dependencies]
python = "3.8"
streamlit = "^1.18.1"
openai = "^0.27.2"
tiktoken = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
